fixing overflow

--- a/styles/recipes.css
+++ b/styles/recipes.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box;
+}
 body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Helvetica Neue, Arial, sans-serif;
@@ -7,6 +10,7 @@ body {
 .heading {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  width: 100vw;
 }
 
 .primary-nav {
@@ -18,7 +22,7 @@ body {
   overflow: hidden;
   background-color: rgba(255, 255, 255, 0);
   z-index: 3;
-  width: 100%;
+  width: 100vw;
   list-style: none;
 }
 
@@ -36,6 +40,7 @@ body {
 .body-paragraph {
   text-align: left;
   justify-content: center;
+  width: 100vw;
 }
 
 /* Mobile Rules*/
@@ -49,7 +54,7 @@ body {
 
 @media (min-width: 768px) {
   .body-paragraph {
-    margin: 0px 300px;
+    margin: 20px;
   }
 
   .has-sidebar {
